Fix layout on small viewports

--- a/assets/site.css
+++ b/assets/site.css
@@ -20,12 +20,12 @@ a {
     text-decoration: none;
 }
 
-p, li {
+p {
     text-align: justify;
 }
 
 ul {
-    padding-left: 1.5rem;
+    padding-left: 1.25rem;
 }
 
 figure {
@@ -46,9 +46,10 @@ code {
     display: inline-block;
     padding: 0.5rem;
     font-family: monospace;
-    white-space: pre;
+    white-space: pre-wrap;
     background-color: #eee;
     border-radius: 0.25rem;
+    max-width: calc(100% - 1rem);
 }
 
 nav {
@@ -80,12 +81,12 @@ nav a:hover, nav a:focus {
 }
 
 nav img {
-    max-height: 1.375rem;
+    max-height: 1.5rem;
 }
 
 main {
     max-width: min(50rem, 100vw);
-    padding: 1rem 2rem;
+    padding: 1rem;
 }
 
 .widescreen {
